# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import configRouter from "./config";
 import accountRouter from "./account";
 import notesRouter from "./notes";
 import audioRouter from "./audio";
+import patientsRouter from "./patients";
 import consultationsRouter from "./consultations";
 
 const router: IRouter = Router();
@@ -13,6 +14,7 @@ router.use(configRouter);
 router.use(accountRouter);
 router.use(notesRouter);
 router.use(audioRouter);
+router.use(patientsRouter);
 router.use(consultationsRouter);
 
 export default router;
